--- a/index.html
+++ b/index.html
@@ -3,14 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=H, initial-scale=1.0">
-    <title>GIT</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="principal">
-        <h1> Hola Mundo </h1>
-        <h2>xd</h2>
-    </div>
+    <header>
+<div  class="logo" >
+    <a href=""><img  src="https://i.pinimg.com/originals/d3/d1/75/d3d175e560ae133f1ed5cd4ec173751a.png" alt="pinterest"></a>
+    <h1  class="name">pinterest</h1>
+
+
+</div>
+<nav>
+<div><h2>blog</h2></div>
+<div><h2>blog</h2></div>
+
+<button>long in <a href=""></a></button>
+<button> sing up<a href=""></a></button>
+
+
+
+
+</nav>
+
+
+
+    </header>
 </body>
 </html>
